// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Button baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-61a49c84=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-61a49c84=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button blockVue demo works fine 1`] = `
<div
  class="row"
  data-v-75d4286a=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
    data-v-75d4286a=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button ghostVue demo works fine 1`] = `
<div
  class="row"
  data-v-511c0528=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
    data-v-511c0528=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      幽灵按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button groupVue demo works fine 1`] = `
<div
  class="row"
  data-v-2d21dd48=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-2d21dd48=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button iconVue demo works fine 1`] = `
<div
  class="row"
  data-v-c77683a8=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <div
      class="t-loading"
      style="font-size: 20px;"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        style="animation-duration: 800ms; width: 20px; height: 20px;"
        version="1.1"
        viewBox="0 0 12 12"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="0"
          y="0"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
      <!---->
    </div>
    <span
      class="t-button__content"
    >
      
      加载中
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
    data-v-c77683a8=""
    role="button"
    type="button"
  >
    <svg
      class="t-icon t-icon-search"
      fill="none"
      height="1em"
      style="font-size: 24px;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="t-button__content"
    >
      <!---->
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7c375b15=""
>
  <h1
    class="title"
    data-v-7c375b15=""
  >
    Button 按钮
  </h1>
  <p
    class="summary"
    data-v-7c375b15=""
  >
    按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-61a49c84=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-61a49c84=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            虚框按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
          data-v-61a49c84=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-7c375b15=""
        data-v-c77683a8=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--loading"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <div
            class="t-loading"
            style="font-size: 20px;"
          >
            <svg
              class="t-loading__gradient t-icon-loading"
              height="1em"
              style="animation-duration: 800ms; width: 20px; height: 20px;"
              version="1.1"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <foreignobject
                height="12"
                width="12"
                x="0"
                y="0"
              >
                <div
                  class="t-loading__gradient-conic"
                />
              </foreignobject>
            </svg>
            <!---->
            <!---->
          </div>
          <span
            class="t-button__content"
          >
            
            加载中
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-c77683a8=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        幽灵按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-511c0528=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--ghost"
          data-v-511c0528=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            幽灵按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        组合按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-2d21dd48=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
          data-v-2d21dd48=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-2d21dd48=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        通栏按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-75d4286a=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block"
          data-v-75d4286a=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-096a7265=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
      </div>
      <div
        class="row"
        data-v-096a7265=""
      >
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            描边按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            虚框按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="true"
          class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
          data-v-096a7265=""
          disabled=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            文字按钮
            
          </span>
          <!---->
        </button>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="row"
        data-v-0a874498=""
        data-v-7c375b15=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 48
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 40
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 32
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
          data-v-0a874498=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮 28
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮形状
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="row"
        data-v-3fc3ed04=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            填充按钮
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          aria-label="搜索"
          class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
          data-v-3fc3ed04=""
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-search"
            fill="none"
            height="1em"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
      </div>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
        data-v-3fc3ed04=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          填充按钮
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-7c375b15=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        按钮主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="section-theme"
        data-v-42dcdba6=""
        data-v-7c375b15=""
      >
        <div
          class="row"
          data-v-42dcdba6=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--dashed t-button--default t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              虚框按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-42dcdba6=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              虚框按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-42dcdba6=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--dashed t-button--danger t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              虚框按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
        <div
          class="row"
          data-v-42dcdba6=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              填充按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              描边按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--dashed t-button--light t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              虚框按钮
              
            </span>
            <!---->
          </button>
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
            data-v-42dcdba6=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              文字按钮
              
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Button > Button shapeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-3fc3ed04=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--square"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--round"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      aria-label="搜索"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--circle"
      data-v-3fc3ed04=""
      role="button"
      type="button"
    >
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M15.0962 5.90381C12.5578 3.3654 8.44221 3.3654 5.90381 5.90381C3.3654 8.44221 3.3654 12.5578 5.90381 15.0962C8.44221 17.6346 12.5578 17.6346 15.0962 15.0962C17.6346 12.5578 17.6346 8.44221 15.0962 5.90381ZM4.48959 4.48959C7.80905 1.17014 13.191 1.17014 16.5104 4.48959C19.5906 7.56983 19.8126 12.4259 17.1764 15.7621L22.5208 21.1066L21.1066 22.5208L15.7621 17.1764C12.4259 19.8126 7.56983 19.5906 4.48959 16.5104C1.17014 13.191 1.17014 7.80905 4.48959 4.48959Z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-button__content"
      >
        <!---->
      </span>
      <!---->
    </button>
  </div>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--block rectangle-button"
    data-v-3fc3ed04=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      填充按钮
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Button > Button sizeVue demo works fine 1`] = `
<div
  class="row"
  data-v-0a874498=""
>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 48
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-medium t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 40
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 32
      
    </span>
    <!---->
  </button>
  <button
    aria-disabled="false"
    class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
    data-v-0a874498=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      按钮 28
      
    </span>
    <!---->
  </button>
</div>
`;

exports[`Button > Button statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-096a7265=""
  >
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="true"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle t-button--disabled"
      data-v-096a7265=""
      disabled=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  
</div>
`;

exports[`Button > Button themeVue demo works fine 1`] = `
<div
  class="section-theme"
  data-v-42dcdba6=""
>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--dashed t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--default t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--dashed t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--primary t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--dashed t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--danger t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
  <div
    class="row"
    data-v-42dcdba6=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--base t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        填充按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        描边按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--dashed t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        虚框按钮
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--text t-button--light t-button--rectangle"
      data-v-42dcdba6=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        文字按钮
        
      </span>
      <!---->
    </button>
  </div>
</div>
`;
